# recall

backend/: README.md  app.py  assessment.md  config.py  extensions.py  manage.py  pyproject.toml  seed_data.json  seeds.py
backend/api/: admin.py  analytics.py  auth.py  quiz.py  user.py
backend/instance/: quiz_master.db
backend/models/: __init__.py  answer.py  attempt.py  chapter.py  question.py  quiz.py  subject.py  user.py
backend/schemas/: admin.py  auth.py
backend/services/: email_service.py  export_service.py  report_service.py
backend/tasks/: export_tasks.py  reminder_tasks.py
backend/templates/: monthly_report.html
frontend/: package-lock.json  package.json
frontend/src/: App.vue  api.js  main.js
frontend/src/components/: AdminChaptersPage.vue  AdminQuestionsPage.vue  AdminQuizzesPage.vue  AdminSubjectsPage.vue  AttemptDetailPage.vue  ChaptersPage.vue  ExportsPage.vue  HistoryPage.vue  LoginForm.vue  MonthlyAnalyticsPage.vue  Navigation.vue  ProfilePage.vue  QuizDetailPage.vue  QuizDifficultyPage.vue  QuizLeaderboardPage.vue  QuizzesPage.vue  RegisterForm.vue  ReportsPage.vue  SettingsPage.vue  SubjectsPage.vue  UserRankingPage.vue
frontend/src/router/: index.js
frontend/src/store/: auth.js
