[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.3",
    "click>=8.2.1",
    "flask>=3.1.1",
    "flask-caching>=2.3.1",
    "flask-jwt-extended>=4.7.1",
    "flask-limiter>=3.12",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "redis>=5.0.0",
    "marshmallow>=3.19.0",
    "WeasyPrint>=57.2",
]
